// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormTextInput renders correctly with error 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span class="govuk-error-message"
      id="test-input-error"
      data-testid="test-input-error"
>
  <span class="govuk-visually-hidden">
    Error:
  </span>
  Field is required
</span>
<input aria-describedby="test-input-error"
       class="govuk-input govuk-input--error"
       id="test-input"
       type="text"
       name="testInput"
>
`;

exports[`FormTextInput renders correctly with hint 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<div id="test-input-hint"
     class="govuk-hint"
>
  Fill me in
</div>
<input aria-describedby="test-input-hint"
       class="govuk-input"
       id="test-input"
       type="text"
       name="testInput"
>
`;

exports[`FormTextInput renders correctly with required props 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<input class="govuk-input"
       id="test-input"
       type="text"
       name="testInput"
>
`;

exports[`FormTextInput renders with a specific width class 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<div id="test-input-hint"
     class="govuk-hint"
>
  Fill me in
</div>
<input aria-describedby="test-input-hint"
       class="govuk-input govuk-input--width-20"
       id="test-input"
       type="text"
       name="testInput"
>
`;

exports[`FormTextInput renders with an add on 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<div id="test-input-hint"
     class="govuk-hint"
>
  Fill me in
</div>
<div class="dfe-flex">
  <input aria-describedby="test-input-hint"
         class="govuk-input govuk-input--width-20"
         id="test-input"
         type="text"
         name="testInput"
  >
  <button type="button">
    Click me!
  </button>
</div>
`;
